src/objects/Academic_Term__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Application_Date__c</fullName>
        <inlineHelpText>Date in which applications for this term open.</inlineHelpText>
        <label>Activate Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>IF( 
Activate_Application_Date__c &lt;=  TODAY() &amp;&amp; End_Application_Date__c  &gt;=  TODAY(), &quot;Active&quot;, &quot;Inactive&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Active&quot; if applications for this term are currently open. &quot;Inactive&quot; otherwise.</inlineHelpText>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Application_Date__c</fullName>
        <inlineHelpText>Date in which applications for this term close.</inlineHelpText>
        <label>End Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <inlineHelpText>End date for this term.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <inlineHelpText>Start date for this term.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Status__c</fullName>
        <formula>IF( 
Term_Start_Date__c &lt;= TODAY() &amp;&amp; Term_End_Date__c &gt;= TODAY(), &quot;Active&quot;, &quot;Inactive&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Active&quot; if this term is currently in session. &quot;Inactive&quot; otherwise.</inlineHelpText>
        <label>Term Status</label>
        <type>Text</type>
    </fields>
    <label>Academic Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Academic Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>